Updates.  - Added Logo  - Modified CSS  - Changed Register page to generic "form" page  - Working on adding a games page with a java game

--- a/index.html
+++ b/index.html
@@ -7,16 +7,21 @@
 </head>
 <body>
 <div class="banner">
+
 </div>
 
 <header>
+	<img src="images/CadyKD_Logo.png" alt="CadyKD Logo" id="cadykd-logo">
 	<nav class="navbar">
 		<ul>
 			<li class="selected-link"><a href="#">HOME</a></li>
-			<li><a href="pages/register.html">REGISTER</a></li>
+			<li><a href="pages/form.html">FORM</a></li>
 		</ul>
 	</nav>
 </header>
+<div >
+
 <div id="backgroundImageAttribution">Background Image from NASA Image Library</div>
+
 </body>
 </html>
