--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>CadyKD</title>
 	<link rel="stylesheet" href="css/main.css">
 </head>
@@ -15,11 +17,12 @@
 	<nav class="navbar">
 		<ul>
 			<li class="selected-link"><a href="#">HOME</a></li>
+			<li><a href="pages/games.html">GAMES</a></li>
 			<li><a href="pages/form.html">FORM</a></li>
 		</ul>
 	</nav>
 </header>
-<div >
+<div class="textbox"></div>
 
 <div id="backgroundImageAttribution">Background Image from NASA Image Library</div>
 
