--- a/pages/form.html
+++ b/pages/form.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>CadyKD Form</title>
 	<script defer src="../js/validation.js"></script>
 	<link rel="stylesheet" href="../css/main.css">
@@ -16,6 +18,7 @@
 	<nav class="navbar">
 		<ul>
 			<li><a href="../index.html">HOME</a></li>
+			<li><a href="games.html">GAMES</a></li>
 			<li class="selected-link"><a href="#">FORM</a></li>
 		</ul>
 	</nav>
