Updates.  - Added 2 snake games and a number guessing game  - Modified the menu on the snake pages to give more screen real estate to the games  - added a tiled game list with clickable tiles  - couldn't get the guessing game to work with forms

--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
 		</ul>
 	</nav>
 </header>
-<div class="textbox"></div>
+<div class="flex-box">
+<div class="textbox">
+	<p>Welcome to CadyKD, a website where I put some stuff together and try to make it all look nice!</p>
+	<p>Here's an image of me:</p>
+	<img src="images/DavidC.jpg" alt="Image of me, David Cady" width="25%">
+</div>
+</div>
 
 <div id="backgroundImageAttribution">Background Image from NASA Image Library</div>
 
