--- a/pages/form.html
+++ b/pages/form.html
@@ -24,7 +24,7 @@
 	</nav>
 </header>
 <form id="form" onsubmit="return false">
-	<h1>Form</h1>
+	<h1>Basic Form</h1>
 	
 	<label for="email"><b>Email</b></label>
 	<input type="email" placeholder="Enter Email" name="email" id="email" required>
