--- a/pages/games.html
+++ b/pages/games.html
@@ -6,8 +6,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>CadyKD Games</title>
 	<link rel="stylesheet" href="../css/main.css">
-	<link rel="stylesheet" href="../css/snake.css">
-	<script src="../js/snake-game/init.js" defer type="module"></script>
 </head>
 <body>
 <div class="banner">
@@ -23,8 +21,31 @@
 		</ul>
 	</nav>
 </header>
-<div>The Snake Game</div> 
-<div id="snake-board"></div>
+
+<div id="game-grid-container">
+	<div class="game-list-item" onclick="location.href='snake1.html';" style="cursor: pointer;">
+		<div class="game-container">
+			<h2>Snake 1</h2>
+			<p>Created by following a <strong><a style="text-decoration: underline;" href="https://www.youtube.com/watch?v=QTcIXok9wNY&t=1069s" target="_blank">YouTube</a></strong> tutorial by <a style="text-decoration: underline;" href="https://www.youtube.com/c/WebDevSimplified" target="_blank">WebDevSimplified</a> with some modifications.</p>
+		</div>
+		<div class="img-container"><img src="../images/snake1.gif"></div>
+	</div>
+	<div class="game-list-item" onclick="location.href='snake2.html';" style="cursor: pointer;">
+		<div class="game-container">
+			<h2>Snake 2</h2>
+			<p>This game was copied from <a style="text-decoration: underline;" href="https://coderzway.com/snake-game-in-javascript/">CoderzWay</a> and modified slightly to fit on this screen.</p>
+		</div>
+		<div class="img-container"><img src="../images/snake2.gif"></div>
+	</div>
+	<div class="game-list-item" onclick="location.href='GuessingGame.html';" style="cursor: pointer;">
+		<div class="game-container">
+			<h2>Guessing Game</h2>
+			<p>This game was adapted from something created during javascript lessons.</p>
+		</div>
+		<div class="img-container"><img src="../images/GuessingGame.jpg"></div>
+	</div>
+</div>
+
 
 <div id="backgroundImageAttribution">Background Image from NASA Image Library</div>
 
