--- a/pages/snake2.html
+++ b/pages/snake2.html
@@ -5,14 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SnakeMania - Ek Gaming Katha</title>
-    <link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="../css/main.css">
+	<link rel="stylesheet" href="../css/snake2-style.css">
 </head>
+<div class="banner">
+
+</div>
 <body>
-    <div class="body">
+<header>
+	<nav class="navbar">
+		<img src="../images/CadyKD_Logo.png" alt="CadyKD Logo" id="cadykd-logo-mini">
+		<ul>
+			<li><a href="../index.html">HOME</a></li>
+			<li class="selected-link"><a href="pages/games.html">GAMES</a></li>
+			<li><a href="form.html">FORM</a></li>
+		</ul>
+	</nav>
+	<nav class="navbar">
+		<ul>
+			<li><a href="snake1.html">Snake 1</a></li>
+			<li class="selected-link"><a href="#">Snake 2</a></li>
+			<li><a href="GuessingGame.html">Guessing Game</a></li>
+		</ul>
+	</nav>
+
+</header>
+<p>This game was copied from <a style="text-decoration: underline;" href="https://coderzway.com/snake-game-in-javascript/">CoderzWay</a> and modified slightly to fit on this screen.</p>
+    <div class="Scores">
         <div id="scoreBox">Score: 0</div>
         <div id="hiscoreBox">HiScore: 0</div>
-        <div id="board"></div>
     </div>
+    <div id="board"></div>
+
+    <div id="backgroundImageAttribution">Background Image from NASA Image Library</div>
+
 </body>
-<script src="../js/index.js"></script>
+<script src="../js/snake-game/snake2.js"></script>
 </html>
