Updates.  - Added an HTML table  - Made the form do stuff to the page it is on  - a few CSS updates  - removed the second navbar from each game

--- a/index.html
+++ b/index.html
@@ -27,6 +27,29 @@
 	<p>Welcome to CadyKD, a website where I put some stuff together and try to make it all look nice!</p>
 	<p>Here's an image of me:</p>
 	<img src="images/DavidC.jpg" alt="Image of me, David Cady" width="25%">
+	<br>
+	<p> Here is an HTML table.
+	<table>
+		<thead>
+			<tr>
+				<th>Column 1</th>
+				<th>Column 2</th>
+				<th>Column 3</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>1, 1</td>
+				<td>2, 1</td>
+				<td>3, 1</td>
+			</tr>
+			<tr>
+				<td>1, 2</td>
+				<td>2, 2</td>
+				<td>3, 2</td>
+			</tr>
+		</tbody>
+	</table>
 </div>
 </div>
 
