--- a/pages/GuessingGame.html
+++ b/pages/GuessingGame.html
@@ -16,16 +16,9 @@
 	<img src="../images/CadyKD_Logo.png" alt="CadyKD Logo" id="cadykd-logo">
 	<nav class="navbar">
 		<ul>
-			<li class="selected-link"><a href="#">HOME</a></li>
-			<li><a href="pages/games.html">GAMES</a></li>
-			<li><a href="pages/form.html">FORM</a></li>
-		</ul>
-	</nav>
-	<nav class="navbar">
-		<ul>
-			<li><a href="snake1.html">Snake 1</a></li>
-			<li><a href="snake2.html">Snake 2</a></li>
-			<li class="selected-link"><a href="#">Guessing Game</a></li>
+			<li><a href="../index.html">HOME</a></li>
+			<li class="selected-link"><a href="games.html">GAMES</a></li>
+			<li><a href="form.html">FORM</a></li>
 		</ul>
 	</nav>
 </header>
